Fix table column widths on Safari.
The way we were using calc() on table column widths doesn't work
correctly under Safari as described by:

https://stackoverflow.com/questions/34749900/bug-using-calc-on-table-cells-in-safari-9

Using `display: inline-block;` on the table cells resolved the
width issue, but created a bunch of other problems and this seems
to be the best thing to do...

--- a/web/style.css
+++ b/web/style.css
@@ -19,24 +19,29 @@ td, th {
 
 td:nth-of-type(1), th:nth-of-type(1) {
     word-break: break-all;
-    width: calc(50% - 10em);
 }
 
-td:nth-of-type(2), th:nth-of-type(2) {
+td:nth-of-type(3), th:nth-of-type(3),
+td:nth-of-type(4), th:nth-of-type(4) {
+    white-space: nowrap;
+}
+
+/* Root page: "Year" column */
+table.root td:nth-of-type(3), table.root th:nth-of-type(3) {
+    width: 5rem;
+}
+
+/* Directory page: "Path" column */
+table.directory td:nth-of-type(2), table.directory th:nth-of-type(2) {
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
-    width: calc(50% - 10em);
 }
 
-td:nth-of-type(3), th:nth-of-type(3) {
-    white-space: nowrap;
-    width: 5em;
-}
-
-td:nth-of-type(4), th:nth-of-type(4) {
-    white-space: nowrap;
-    width: 5em;
+/* Directory page: "Type" and "Size" columns */
+table.directory td:nth-of-type(3), table.directory th:nth-of-type(3),
+table.directory td:nth-of-type(4), table.directory th:nth-of-type(4) {
+    width: 5rem;
 }
 
 th {
